html/css/main.css
/* ... */
#main-menu > div.icon > a {
    display:block;
    height:45px;
    width:45px;
}

/* MOD - The Social Cloud */
#main-menu #mod-social {
    background-image:url(../img/menu-icons-sprite.png);
    background-position:0 bottom;
    background-repeat:no-repeat;
}
#main-menu #mod-social:hover,
#main-menu #mod-social.selected {
    background-color:#000;
    background-position:0 top;
}

/* Effects */
#main-menu #mod-plugins {
    background-image:url(../img/menu-icons-sprite.png);
    background-position:-45px bottom;
    background-repeat:no-repeat;
}
#main-menu #mod-plugins:hover,
#main-menu #mod-plugins.selected {
    background-color:#000;
    background-position:-45px top;
}

/* Pedalboards */
#main-menu #mod-pedalboard {
    background-image:url(../img/menu-icons-sprite.png);
    background-position:-90px bottom;
    background-repeat:no-repeat;
}
#main-menu #mod-pedalboard:hover,
#main-menu #mod-pedalboard.selected {
    background-color:#000;
    background-position:-90px top;
}

/* Banks */
#main-menu #mod-bank {
    background-image:url(../img/menu-icons-sprite.png);
    background-position:-135px bottom;
    background-repeat:no-repeat;
}
#main-menu #mod-bank:hover,
#main-menu #mod-bank.selected {
    background-color:#000;
    background-position:-135px top;
}

#main-menu #banks-saving {
    margin: 21px 0 0 6px;
    font-size: 10px;
    color: #666;
    display: none;
}

/* MOD - Settings */
#main-menu #mod-settings {
    background-image:url(../img/menu-icons-sprite.png);
    background-position:-180px bottom;
    background-repeat:no-repeat;
    border-color:#2b2b2b;
    border-style:solid;
    border-width:0 0 0 1px;
    float:right;
}
#main-menu #mod-settings.uptodate {
    background-color:#000;
    background-position:-180px top;
}

/* MOD - Disconnect */
#main-menu #mod-disconnect {
    border-color:#2b2b2b;
    border-style:solid;
    border-width:0 0 0 1px;
    color:rgb(47,47,47);
    float:right;
    font-size:11px;
    font-weight:bold;
    line-height:4.5;
    text-align:center;
    text-transform:uppercase;
    width:100px;
}
#main-menu #mod-disconnect:hover,
#main-menu #mod-disconnect.selected {
    background-color:#000;
    color:#fff;
}


/* MOD - Bluetooth */
#main-menu #mod-bluetooth {
    background-image:url(../img/menu-icons-sprite.png);
    background-position:-225px bottom;
    background-repeat:no-repeat;
    border-color:#2b2b2b;
    border-style:solid;
    border-width:0 0 0 1px;
    float:right;
}
#main-menu #mod-bluetooth.online {
    background-color:#000;
    background-position:-225px top;
}

/* MOD - Cloud */
#main-menu #mod-cloud {
    background-image:url(../img/menu-icons-sprite.png);
    background-position:-270px bottom;
    background-repeat:no-repeat;
    border-color:#2b2b2b;
    border-style:solid;
    border-width:0 0 0 1px;
    float:right;
}

#main-menu #mod-cloud.logged,
#main-menu #mod-cloud.online {
    background-color:#000;
    background-position:-270px top;
}

.tooltip {
    background:white;
    border-radius:3px;
    bottom:50px;
    height:auto;
    padding:7px;
    position:absolute;
}

.tooltip .text {
    color:#222222;
    font-weight:bold;
    line-height:1;
    text-align:center;
}

.tooltip .arrow {
    border-bottom:9px solid transparent;
    border-left:9px solid transparent;
    border-right:9px solid transparent;
    border-top:9px solid white;
    height:0; 
    position:absolute;
    bottom:-18px;
    right:14px;
    width:0; 
}



/* = MOD UPGRADE SYSTEM
================================================ */
#mod-upgrade {
    background:white;
    border-radius:9px;
    color:black;
    font-size:12px;
    max-height:350px;
    max-width:450px;
    min-width:350px;
    overflow:auto;
    position:absolute;
    right:10px;
    bottom:50px;
    z-index:10;
}

#mod-upgrade .progressbar-wrapper {
    border: 1px solid #444444;
    border-radius: 3px;
    height: 20px;
    width: 330px;
}

#mod-upgrade .progressbar {
    background-color: #8888ff;
    height: 20px;
}


/* = PLUGINS LIBRARY
================================================ */
#plugins-library {
    bottom:56px;
    height:166px;
    left:0;
    position:absolute;
    right:0;
}

/* Fold/Unfold */
#plugins-library.folded {
    height:26px;
}
#plugins-library .fold,
#plugins-library .folded { 
    cursor:pointer;
    display:block;
    float:right;
    height:36px;
    position:absolute;
    top:0;
    right:0;
    width:36px;
}
#plugins-library .fold {
    background-color:#000;
    background-image:url(../img/nav-bottom.png);
    background-position:center center;
    background-repeat:no-repeat;
}
#plugins-library.folded .fold {
    background-color:#000;
    background-image:url(../img/nav-top.png);
    background-position:center center;
    background-repeat:no-repeat;
    display:block !important;
}

/* Effects Filter Settings */
#plugins-library .settings {
    background-color:black;
    background-image:url(../img/icn-search-white.png);
    background-position:center center;
    background-repeat:no-repeat;
    cursor:pointer;
    display:block;
    height:36px;
    position:absolute;
    right:37px;
    top:0;
    width:36px;
}
#plugins-library #plugins-library-settings-window {
    background:#000;
    bottom:167px;
    color:#fff;
    position:absolute;
    right:0;
}
#plugins-library.folded #plugins-library-settings-window {
    bottom:27px;
}
#plugins-library #plugins-library-settings-window h1 {
    font-size:14px;
    font-weight:bold;
    line-height:1;
    margin:0 0 10px;
    padding:0;
    text-transform:uppercase;
}
#plugins-library #plugins-library-settings-window form {
    margin-bottom:0;
}
#plugins-library #plugins-library-settings-window label {
    margin-right:10px;
}
#plugins-library #plugins-library-settings-window label.checkbox:last-child {
    margin-right:0;
}
#plugins-library #plugins-library-settings-window .control-group {
    position:relative;
}
/* ... */

